--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -3,11 +3,11 @@
 # See: https://gohugo.io/getting-started/configuration/
 # -------------------------------------------------------------------------------------
 
-title = "Hugo FixIt Blog"
+title = "Peculiarkb"
 baseURL = "https://eloy98.github.io/peculiarkb/"
 # theme = "FixIt"
-defaultContentLanguage = "en"
-languageCode = "en"
+defaultContentLanguage = "zh-cn"
+languageCode = "zh-CN"
 hasCJKLanguage = true
 enableRobotsTXT = true
 enableEmoji = true
@@ -22,3 +22,17 @@ ignoreLogs = [
   "error-remote-getjson",
   "error-missing-instagram-accesstoken"
 ]
+defaultContentLanguageInSubdir = true
+[languages]
+  [languages.zh-cn]
+    disabled = false
+    languageCode = 'zh-CN'
+    languageDirection = 'ltr'
+    languageName = '简体中文'
+    weight = 1
+  [languages.en]
+    disabled = false
+    languageCode = 'en'
+    languageDirection = 'ltr'
+    languageName = 'English'
+    weight = 2
