--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -8,7 +8,7 @@ version = "0.3.X" # e.g. "0.2.X", "0.2.15", "v0.2.15" etc.
 # site description
 description = "This is my new Hugo FixIt site"
 # site keywords
-keywords = ["Hugo", "FixIt"]
+keywords = ["Hugo", "FixIt", "Keyboard"]
 # site default theme ["light", "dark", "auto"]
 defaultTheme = "auto"
 # which hash function used for SRI, when empty, no SRI is used
@@ -113,7 +113,7 @@ disableThemeInject = false
   # Header title config
   [header.title]
     # URL of the LOGO
-    logo = "/hugo-fixit-starter/images/fixit.min.svg"
+    logo = ""
     # title name
     name = ""
     # you can add extra information before the name (HTML format is supported), such as icons
@@ -226,13 +226,13 @@ disableThemeInject = false
     # Gravatar Email for preferred avatar in home page
     gravatarEmail = "xx@xx.com"
     # URL of avatar shown in home page
-    avatarURL = ""
+    avatarURL = "/images/avatar.jpg"
     # FixIt 0.2.17 | NEW identifier of avatar menu link
     avatarMenu = ""
     # title shown in home page (HTML format is supported)
     title = ""
     # subtitle shown in home page
-    subtitle = "This is my new Hugo FixIt site"
+    subtitle = "Programmer who loves to make peculiar keyboards"
     # whether to use typeit animation for subtitle
     typeit = true
     # whether to show social links
@@ -247,7 +247,7 @@ disableThemeInject = false
 
 # FixIt 0.2.16 | CHANGED Social config about the author
 [social]
-  GitHub = ""
+  GitHub = "Eloy98"
   Linkedin = ""
   Twitter = ""
   Instagram = ""
@@ -319,7 +319,7 @@ disableThemeInject = false
   Diaspora = ""
   CSDN = ""
   Discord = ""
-  DiscordInvite = ""
+  DiscordInvite = "PPz2HrZ47M"
   Lichess = ""
   Pleroma = ""
   Kaggle = ""
@@ -332,7 +332,7 @@ disableThemeInject = false
   Douyin = ""
   TikTok = ""
   Phone = ""
-  Email = ""
+  Email = "eloy1172240653@gmail.com"
   RSS = true
   # custom social links like the following
   # [social.twitter]
