--- a/config/_default/markup.toml
+++ b/config/_default/markup.toml
@@ -1,44 +1,15 @@
 # -------------------------------------------------------------------------------------
-# Markup related configuration in Hugo
+# Markup related configuration in Hugo | Hugo 解析文档的配置
 # See: https://gohugo.io/getting-started/configuration-markup/
 # -------------------------------------------------------------------------------------
 
 # Syntax Highlighting (https://gohugo.io/content-management/syntax-highlighting)
+# 语法高亮设置 (https://gohugo.io/content-management/syntax-highlighting)
 [highlight]
-  ########## necessary configurations ##########
-  # https://github.com/Lruihao/FixIt/issues/43
-  codeFences = true
-  lineNos = true
-  lineNumbersInTable = true
-  noClasses = false
-  ########## necessary configurations ##########
-  guessSyntax = true
+  _merge = "shallow"
 
 # Goldmark is from Hugo 0.60 the default library used for Markdown
+# Goldmark 是 Hugo 0.60 以来的默认 Markdown 解析库
+# https://gohugo.io/getting-started/configuration-markup/#goldmark
 [goldmark]
-  [goldmark.extensions]
-    definitionList = true
-    footnote = true
-    linkify = true
-    strikethrough = true
-    table = true
-    taskList = true
-    typographer = true
-  [goldmark.parser]
-    autoHeadingID = true
-    autoHeadingIDType = "github"
-    wrapStandAloneImageWithinParagraph = true
-    [goldmark.parser.attribute]
-      block = true
-      title = true
-  [goldmark.renderer]
-    # By default, Goldmark ignores newlines within a paragraph. Set to true to render newlines as <br> elements.
-    hardWraps = false
-    # whether to use HTML tags directly in the document
-    unsafe = true
-
-# Table Of Contents settings
-[tableOfContents]
-  ordered = false
-  startLevel = 2
-  endLevel = 6
+  _merge = "shallow"
