--- a/config/_default/outputs.toml
+++ b/config/_default/outputs.toml
@@ -4,3 +4,8 @@
 # -------------------------------------------------------------------------------------
 
 _merge = "shadow"
+home = ["html", "rss", "archives", "offline", "readme", "baidu_urls", "search"]
+page = ["html", "markdown"]
+section = ["html", "rss"]
+taxonomy = ["html"]
+term = ["html", "rss"]
