--- a/config/_default/params.zh-cn.toml
+++ b/config/_default/params.zh-cn.toml
@@ -5,12 +5,20 @@
   [search.algolia]
     index = "index.zh-cn"
 
+
+
 [home]
+  paginate = 10
   [home.profile]
     enable = true
+    gravatarEmail = ""
+    avatarURL = "/images/avatar.jpg"
+    avatarMenu = ""
+    title = "xiix"
     subtitle = "爱做奇特键盘的程序员"
-    [home.posts]
+    typeit = true
+    social = true
+    disclaimer = ""
+  [home.posts]
     enable = true
-    # special amount of posts in each home posts page
-    # 主页每页显示文章数量
-    paginate = 6
+    paginate = 6   
