--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -89,7 +89,7 @@ disableThemeInject = false
   # whether to use the absolute URL based on the baseURL in search index
   absoluteURL = false
   [search.algolia]
-    index = "keyboard"
+    index = ""
     appID = "ETG9ULY1WO"
     searchKey = "6348032f8fc69d372bf9bfa10847cc63"
   [search.fuse]
@@ -650,7 +650,7 @@ disableThemeInject = false
     fullscreen = true
   # FixIt 0.3.0 | NEW [Experimental] cache remote images locally, see: https://github.com/hugo-fixit/FixIt/pull/362
   [page.cacheRemoteImages]
-    enable = false
+    enable = true
     # replace remote image url with local image url (place in public/images/remote/)
     replace = false
   # FixIt 0.3.0 | NEW Related content config (https://gohugo.io/content-management/related/)
